--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "electron": "^9.0.0",
+    "electron": "8.3.1",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
@@ -69,8 +69,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "dev": "electron .",
-    "dev-start": "NODE_ENV=development electron -w . ",
+    "dev": "NODE_ENV=development electron .",
     "build-watch": "rollup -c -w",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
